[package]
name = "anemoi"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version="^0.3.0", default-features = false }
ark-bls12-377 = { version="^0.3.0", default-features = false, optional = true }
ark-bls12-381 = { version="^0.3.0", default-features = false, optional = true }
ark-bn254 = { version="^0.3.0", default-features = false, optional = true }
ark-ec = { version="^0.3.0", default-features = false }
ark-pallas = { version="^0.3.0", default-features = false, optional = true }
ark-std = { version="^0.3.0", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
rand_core = { version = "0.6.2", default-features = false, features = ["getrandom"] }
unroll = { version = "0.1.5" }

[dev-dependencies]
ark-serialize = { version="^0.3.0" }
ark-algebra-test-templates = { version="^0.3.0" }
criterion = "0.3"

[features]
default = [
    "std",
    "bls_377",
    "bls_381",
    "bn_254",
    "ed_on_bls12_377",
    "jubjub",
    "pallas",
    "vesta",
]
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-ec/std",
    "rand_core/std"
]
bls_377 = ["ark-bls12-377/curve"]
bls_381 = ["ark-bls12-381/curve"]
bn_254 = ["ark-bn254/curve"]
ed_on_bls12_377 = ["ark-bls12-377/scalar_field"]
jubjub = ["ark-bls12-381/scalar_field"]
pallas = ["ark-pallas/curve"]
vesta = ["ark-pallas/scalar_field"]


[[bench]]
name = "bls12_377"
harness = false
required-features = ["bls_377"]

[[bench]]
name = "bls12_381"
harness = false
required-features = ["bls_381"]

[[bench]]
name = "bn_254"
harness = false
required-features = ["bn_254"]

[[bench]]
name = "ed_on_bls12_377"
harness = false
required-features = ["ed_on_bls12_377"]

[[bench]]
name = "jubjub"
harness = false
required-features = ["jubjub"]

[[bench]]
name = "pallas"
harness = false
required-features = ["pallas"]

[[bench]]
name = "vesta"
harness = false
required-features = ["vesta"]
